--- a/assignment1/assignment_1.ipynb
+++ b/assignment1/assignment_1.ipynb
@@ -158,7 +158,8 @@
     "    df_out['year'] = df_out['datetime_dt'].dt.year\r\n",
     "    \r\n",
     "    return df_out \r\n",
-    "# hej piger :) "
+    "\r\n",
+    "# hej piger"
    ],
    "outputs": [],
    "metadata": {
