omrokering af koder

--- a/assignment1/assignment_1.ipynb
+++ b/assignment1/assignment_1.ipynb
@@ -56,51 +56,51 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> **Ex. 2.3.4:** The code below runs through some of the steps we completed in exercise 2.3.4 in Module 2. As we are not going to request the website but load the data from a csv file, your task is to **rewrite parts of the function**. In particular, you need to do the following:\n",
-    ">1. Rename the function to `process_weather` instead of `load_weather`. \n",
-    ">2. The function should now  take a `dataframe` as input. \n",
-    ">3. Consider whether `df_weather.iloc[:, :4]` is necessary for the weather data loaded from  the csv file. The documentation string should also be rewritten appropriately. \n",
-    ">4. The function contains a sorting step. **Change it so that it first sorts by _station_, then by _datetime_. The sorting should be ascending for _station_ and descending for _datetime_.** \n",
-    ">5. After having rewritten the function, load the weather data from `'weather_data_1870-1875.csv'` into a pandas dataframe, apply the `process_weather` function to this dataframe, and store the result in the variable `df_weather_period`.\n",
-    "\n",
-    "```python\n",
-    "import pandas as pd\n",
-    "\n",
-    "def load_weather(year):\n",
-    "    \n",
-    "    '''\n",
-    "    This functions loads the data for selected year and then structures and cleans it.\n",
-    "    - Structuring includes removing unused columns, renaming and selecting only observations \n",
-    "    of maximum temperature. \n",
-    "    - Cleaning includes inserting missing decimal, sorting and resetting index.\n",
-    "    '''\n",
-    "    url = f\"ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/{year}.csv.gz\"\n",
-    "    \n",
-    "    # loads the data\n",
-    "    df_weather = pd.read_csv(url, header=None)\\\n",
-    "                    .iloc[:,:4] \n",
-    "    \n",
-    "    # structure and clean data using methods chaining\n",
-    "    # note that the original columns now are strings when loading the csv file\n",
-    "    # and not integers as when downloading the data\n",
-    "    df_out = \\\n",
-    "        df_weather\\\n",
-    "            .rename(columns={'0': 'station', '1': 'datetime', '2': 'obs_type', '3': 'obs_value'})\\\n",
-    "            .query(\"obs_type == 'TMAX'\")\\\n",
-    "            .assign(obs_value=lambda df: df['obs_value']/10)\\\n",
-    "            .sort_values(by=['station', 'datetime'])\\\n",
-    "            .reset_index(drop=True)\\\n",
-    "            .copy() \n",
-    "\n",
-    "    # area process\n",
-    "    df_out['area'] = df_out['station'].str[0:2]\n",
-    "    \n",
-    "    # datetime process\n",
-    "    df_out['datetime_dt'] = pd.to_datetime(df_out['datetime'], format = '%Y%m%d')\n",
-    "    df_out['month'] = df_out['datetime_dt'].dt.month\n",
-    "    df_out['year'] = df_out['datetime_dt'].dt.year\n",
-    "    \n",
-    "    return df_out\n",
+    "> **Ex. 2.3.4:** The code below runs through some of the steps we completed in exercise 2.3.4 in Module 2. As we are not going to request the website but load the data from a csv file, your task is to **rewrite parts of the function**. In particular, you need to do the following:\r\n",
+    ">1. Rename the function to `process_weather` instead of `load_weather`. \r\n",
+    ">2. The function should now  take a `dataframe` as input. \r\n",
+    ">3. Consider whether `df_weather.iloc[:, :4]` is necessary for the weather data loaded from  the csv file. The documentation string should also be rewritten appropriately. \r\n",
+    ">4. The function contains a sorting step. **Change it so that it first sorts by _station_, then by _datetime_. The sorting should be ascending for _station_ and descending for _datetime_.** \r\n",
+    ">5. After having rewritten the function, load the weather data from `'weather_data_1870-1875.csv'` into a pandas dataframe, apply the `process_weather` function to this dataframe, and store the result in the variable `df_weather_period`.\r\n",
+    "\r\n",
+    "```python\r\n",
+    "import pandas as pd\r\n",
+    "\r\n",
+    "def load_weather(year):\r\n",
+    "    \r\n",
+    "    '''\r\n",
+    "    This functions loads the data for selected year and then structures and cleans it.\r\n",
+    "    - Structuring includes removing unused columns, renaming and selecting only observations \r\n",
+    "    of maximum temperature. \r\n",
+    "    - Cleaning includes inserting missing decimal, sorting and resetting index.\r\n",
+    "    '''\r\n",
+    "    url = f\"ftp://ftp.ncdc.noaa.gov/pub/data/ghcn/daily/by_year/{year}.csv.gz\"\r\n",
+    "    \r\n",
+    "    # loads the data\r\n",
+    "    df_weather = pd.read_csv(url, header=None)\\\r\n",
+    "                    .iloc[:,:4] \r\n",
+    "    \r\n",
+    "    # structure and clean data using methods chaining\r\n",
+    "    # note that the original columns now are strings when loading the csv file\r\n",
+    "    # and not integers as when downloading the data\r\n",
+    "    df_out = \\\r\n",
+    "        df_weather\\\r\n",
+    "            .rename(columns={'0': 'station', '1': 'datetime', '2': 'obs_type', '3': 'obs_value'})\\\r\n",
+    "            .query(\"obs_type == 'TMAX'\")\\\r\n",
+    "            .assign(obs_value=lambda df: df['obs_value']/10)\\\r\n",
+    "            .sort_values(by=['station', 'datetime'])\\\r\n",
+    "            .reset_index(drop=True)\\\r\n",
+    "            .copy() \r\n",
+    "\r\n",
+    "    # area process\r\n",
+    "    df_out['area'] = df_out['station'].str[0:2]\r\n",
+    "    \r\n",
+    "    # datetime process\r\n",
+    "    df_out['datetime_dt'] = pd.to_datetime(df_out['datetime'], format = '%Y%m%d')\r\n",
+    "    df_out['month'] = df_out['datetime_dt'].dt.month\r\n",
+    "    df_out['year'] = df_out['datetime_dt'].dt.year\r\n",
+    "    \r\n",
+    "    return df_out\r\n",
     "```"
    ],
    "metadata": {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "source": [
     "import pandas as pd\r\n",
     "\r\n",
@@ -157,8 +157,7 @@
     "    df_out['month'] = df_out['datetime_dt'].dt.month\r\n",
     "    df_out['year'] = df_out['datetime_dt'].dt.year\r\n",
     "    \r\n",
-    "    return df_out\r\n",
-    "# hej piger "
+    "    return df_out"
    ],
    "outputs": [],
    "metadata": {
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "source": [
     "# load the weather data from 1870-1875\r\n",
     "df_weather_period = process_weather('weather_data_1870-1875.csv')\r\n",
@@ -374,31 +373,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 95
+     "execution_count": 21
     }
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "df46e0f8cdbad9d34e734605451c69e6",
-     "grade": true,
-     "grade_id": "problem_234_tests",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -422,21 +400,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "source": [
-    "# Exploratory plot\n",
-    "df_weather_period.obs_value.plot(figsize=[11,6])\n",
-    "\n",
-    "# Detecting outliers\n",
-    "df_weather_period[df_weather_period.obs_value < -50]\n",
-    "# These three observations can be characterized as outliers or simply misreported observations. \n",
-    "# -273 celcius degrees is the absolute minimum temperature, so -573.3 celcius degrees is not possible.\n",
-    "\n",
-    "# Drop rows, where obs_value < -50 + drop old index and reset\n",
-    "df_weather_period = df_weather_period[df_weather_period['obs_value']>= -50]\\\n",
-    "                                                    .reset_index(drop=True)"
+    "# Exploratory plot\r\n",
+    "df_weather_period.obs_value.plot(figsize=[11,6])\r\n",
+    "\r\n",
+    "# Detecting outliers\r\n",
+    "df_weather_period[df_weather_period.obs_value < -50]\r\n",
+    "# These three observations can be characterized as outliers or simply misreported observations. \r\n",
+    "# -273 celcius degrees is the absolute minimum temperature, so -573.3 celcius degrees is not possible."
    ],
    "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            station  datetime obs_type  obs_value area datetime_dt  month  \\\n",
+       "126366  USW00023068  18751115     TMAX     -573.3   US  1875-11-15     11   \n",
+       "126397  USW00023068  18751015     TMAX     -573.3   US  1875-10-15     10   \n",
+       "126398  USW00023068  18751014     TMAX     -573.3   US  1875-10-14     10   \n",
+       "\n",
+       "        year  \n",
+       "126366  1875  \n",
+       "126397  1875  \n",
+       "126398  1875  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>obs_type</th>\n",
+       "      <th>obs_value</th>\n",
+       "      <th>area</th>\n",
+       "      <th>datetime_dt</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>126366</th>\n",
+       "      <td>USW00023068</td>\n",
+       "      <td>18751115</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>-573.3</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1875-11-15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126397</th>\n",
+       "      <td>USW00023068</td>\n",
+       "      <td>18751015</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>-573.3</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1875-10-15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126398</th>\n",
+       "      <td>USW00023068</td>\n",
+       "      <td>18751014</td>\n",
+       "      <td>TMAX</td>\n",
+       "      <td>-573.3</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1875-10-14</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    },
     {
      "output_type": "display_data",
      "data": {
@@ -466,9 +525,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "source": [
-    "# Printing dataframe\n",
+    "# Drop rows, where obs_value < -50 + drop old index and reset\r\n",
+    "df_weather_period = df_weather_period[df_weather_period['obs_value']>= -50]\\\r\n",
+    "                                                    .reset_index(drop=True)\r\n",
+    "# Printing dataframe\r\n",
     "df_weather_period"
    ],
    "outputs": [
@@ -662,16 +724,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 98
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 26,
    "source": [
-    "# Taking a new look at the plot without outliers\n",
+    "# Taking a new look at the plot without outliers\r\n",
     "df_weather_period.obs_value.plot(figsize=[11,6])"
    ],
    "outputs": [
@@ -683,7 +745,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 99
+     "execution_count": 26
     },
     {
      "output_type": "display_data",
@@ -699,27 +761,6 @@
     }
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "5971a3b2c04c14fb5fb5f180e25ff481",
-     "grade": true,
-     "grade_id": "problem_notseenexercises_tests",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -749,16 +790,16 @@
    "cell_type": "code",
    "execution_count": 105,
    "source": [
-    "# Converting the area column to a categorical variable (with no order)\n",
-    "cats_area = df_weather_period['area'].astype('category')\n",
-    "print(cats_area)\n",
-    "\n",
-    "# Transforming the obs_value column to a categorical variable by partitioning it into 3 intervals\n",
-    "obs_value_cat = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1])\n",
-    "obs_value_cat.cat.categories\n",
-    "\n",
-    "# Making another column with obs_value as categorical variables with labels\n",
-    "obs_value_cat_labeled = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1], labels = [\"cold\", \"medium\", \"hot\"])\n",
+    "# Converting the area column to a categorical variable (with no order)\r\n",
+    "cats_area = df_weather_period['area'].astype('category')\r\n",
+    "print(cats_area)\r\n",
+    "\r\n",
+    "# Transforming the obs_value column to a categorical variable by partitioning it into 3 intervals\r\n",
+    "obs_value_cat = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1])\r\n",
+    "obs_value_cat.cat.categories\r\n",
+    "\r\n",
+    "# Making another column with obs_value as categorical variables with labels\r\n",
+    "obs_value_cat_labeled = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1], labels = [\"cold\", \"medium\", \"hot\"])\r\n",
     "obs_value_cat_labeled.cat.categories"
    ],
    "outputs": [
@@ -810,7 +851,7 @@
    "cell_type": "code",
    "execution_count": 106,
    "source": [
-    "# Printing dataframe\n",
+    "# Printing dataframe\r\n",
     "df_weather_period"
    ],
    "outputs": [
@@ -1545,9 +1586,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1559,7 +1599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "varInspector": {
    "cols": {
@@ -1589,6 +1629,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "ee1fcbc615ae4aa031adba09e31b439c58a0b9951cea9846cdfeb5862e308e08"
   }
  },
  "nbformat": 4,
