tilføjelse af "obs-val-cat-label"

--- a/assignment1/assignment_1.ipynb
+++ b/assignment1/assignment_1.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "source": [
     "import pandas as pd\r\n",
     "\r\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "source": [
     "# load the weather data from 1870-1875\r\n",
     "df_weather_period = process_weather('weather_data_1870-1875.csv')\r\n",
@@ -373,7 +373,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 33
     }
    ],
    "metadata": {}
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "source": [
     "# Exploratory plot\r\n",
     "df_weather_period.obs_value.plot(figsize=[11,6])\r\n",
@@ -494,7 +494,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 34
     },
     {
      "output_type": "display_data",
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "source": [
     "# Drop rows, where obs_value < -50 + drop old index and reset\r\n",
     "df_weather_period = df_weather_period[df_weather_period['obs_value']>= -50]\\\r\n",
@@ -724,14 +724,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 35
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "source": [
     "# Taking a new look at the plot without outliers\r\n",
     "df_weather_period.obs_value.plot(figsize=[11,6])"
@@ -745,7 +745,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 36
     },
     {
      "output_type": "display_data",
@@ -788,19 +788,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 37,
    "source": [
     "# Converting the area column to a categorical variable (with no order)\r\n",
     "cats_area = df_weather_period['area'].astype('category')\r\n",
-    "print(cats_area)\r\n",
-    "\r\n",
-    "# Transforming the obs_value column to a categorical variable by partitioning it into 3 intervals\r\n",
-    "obs_value_cat = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1])\r\n",
-    "obs_value_cat.cat.categories\r\n",
-    "\r\n",
-    "# Making another column with obs_value as categorical variables with labels\r\n",
-    "obs_value_cat_labeled = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1], labels = [\"cold\", \"medium\", \"hot\"])\r\n",
-    "obs_value_cat_labeled.cat.categories"
+    "print(cats_area)"
    ],
    "outputs": [
     {
@@ -821,16 +813,6 @@
       "Name: area, Length: 132314, dtype: category\n",
       "Categories (13, object): ['AS', 'AU', 'BE', 'CA', ..., 'IT', 'SZ', 'UK', 'US']\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['cold', 'medium', 'hot'], dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 105
     }
    ],
    "metadata": {
@@ -849,7 +831,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 38,
+   "source": [
+    "# Transforming the obs_value column to a categorical variable by partitioning it into 3 intervals\r\n",
+    "obs_value_cat = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1])\r\n",
+    "obs_value_cat.cat.categories"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "IntervalIndex([(-31.101000000000003, -1.1], (-1.1, 28.3], (28.3, 47.8]],\n",
+       "              closed='right',\n",
+       "              dtype='interval[float64]')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "# Making another column with obs_value as categorical variables with labels\r\n",
+    "df_weather_period['obs_value_cat_labeled'] = pd.qcut(pd.Series(df_weather_period['obs_value']), q = [0, 0.10, 0.90, 1], labels = [\"cold\", \"medium\", \"hot\"])\r\n",
+    "obs_value_cat_labeled.cat.categories"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['cold', 'medium', 'hot'], dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "source": [
     "# Printing dataframe\r\n",
     "df_weather_period"
@@ -1057,31 +1085,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 106
+     "execution_count": 43
     }
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "ed4589eb5606644a884cfc75dd36d40f",
-     "grade": true,
-     "grade_id": "problem_232_tests",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -1127,7 +1134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# YOUR CODE HERE\n",
+    "# YOUR CODE HERE\r\n",
     "raise NotImplementedError()"
    ],
    "outputs": [],
