:) dato på grafer

--- a/assignment1/assignment_1.ipynb
+++ b/assignment1/assignment_1.ipynb
@@ -190,9 +190,10 @@
     }
    ],
    "source": [
-    "# load the weather data from 1870-1875\r\n",
-    "df_weather_period = process_weather('weather_data_1870-1875.csv')\r\n",
-    "df_weather_period"
+    "# load the weather data from 1870-1875\n",
+    "df_weather_period = process_weather('weather_data_1870-1875.csv')\n",
+    "df_weather_period \n",
+    "# Anna"
    ]
   },
   {
