--- a/assignment1/assignment_1.ipynb
+++ b/assignment1/assignment_1.ipynb
@@ -420,8 +420,8 @@
     }
    ],
    "source": [
-    "# Printing dataframe\r\n",
-    "df_weather_period"
+    "# Printing dataframe\n",
+    "df_weather_period "
    ]
   },
   {
